--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@clone-yangson/fr-generator-hyx",
-  "version": "2.7.3",
+  "version": "2.7.4",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:YangsonHung/fr-generator-hyx.git"
+  },
   "scripts": {
-    "build": "father-build"
+    "build": "father-build",
+    "publish": "npm publish --access public"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -20,15 +25,13 @@
   },
   "peerDependencies": {
     "antd": "4.x",
+    "form-render": "1.x",
     "react": ">=16.14.0",
     "react-dom": ">=16.14.0"
   },
   "dependencies": {
-    "antd": "^4.4.2",
     "clone": "^2.1.2",
     "copy-text-to-clipboard": "^2.2.0",
-    "form-render": "1.x",
-    "moment": "^2.27.0",
     "nanoid": "^3.1.22",
     "rc-color-picker": "^1.2.6",
     "react-dnd": "^14.0.2",
@@ -36,9 +39,11 @@
     "react-sortable-hoc": "^2.0.0"
   },
   "devDependencies": {
+    "antd": "4.x",
+    "form-render": "1.x",
     "babel-plugin-import": "^1.13.3",
+    "father-build": "^1.17.2",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.4.0",
-    "father-build": "^1.17.2"
+    "rollup-plugin-copy": "^3.4.0"
   }
 }
