--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,22 @@
 /yarn-error.log
 /package-lock.json
 
-
 # production
 /dist
+/es
 /lib
 /docs-dist
+
 # misc
-.idea
 .DS_Store
-.idea
-.vscode
+/coverage
+
+# umi
+.umi
+.umi-production
+.umi-test
+.env.local
+
+# ide
+/.vscode
+/.idea
