--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "antd": "4.x",
-    "form-render": "1.x",
+    "@clone-yangson/form-render-next": "1.x",
     "react": ">=16.14.0",
     "react-dom": ">=16.14.0"
   },
@@ -52,23 +52,23 @@
     "react-sortable-hoc": "^2.0.0"
   },
   "devDependencies": {
+    "@clone-yangson/form-render-next": "^1.9.12",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
     "antd": "4.x",
-    "form-render": "1.x",
     "babel-plugin-import": "^1.13.3",
-    "father-build": "^1.17.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.4.0",
     "dumi": "^1.1.0",
+    "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
-    "yorkie": "^2.0.0",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "yorkie": "^2.0.0"
   }
 }
